ecoleinfographie/resources/assets/stylus/components/web_home/web_home.styl
.web-what
.webdesigner
.webintegrator
.frontend
.devbackend
.webmobile
  position relative
  &__wrapper
    position: relative
    @extend .containerGridz
    padding 0 s($paddingSideGlobal)
    clearfix(right)
  &__title
    @extend .titleXXXL
    margin-bottom s(30, $text-XXXL)
  &__text
    @extend .paragraph21
  &__link
    @extend .linkArrowLarge
    margin-top s(50, $text-L)

.web-what
  min-height s(950)
  &__wrapper
    &-text
      float: right
      width 45%
      margin-top s(350)
  &__title
    & span
      @extend .hidden
    & svg
      position: relative
      top s(7)
      left s(5)
  &__img
    position: absolute
    top: s(-50)
    left s(-250)
    z-index 10

.webdesigner
  min-height s(740)
  background-color $cBackgroundBlueGrey
  margin-bottom s(250)
  baseShawl($cBackgroundBlueGrey, 4.5deg)
  &__wrapper-text
    float: left
    width 36%
    margin-top s(200)
  &__img
    position: absolute
    right: s(-150)
    top s(170)
    opacity 0
    transform translateX(250px)

.no-js .webdesigner__img
  opacity 1
  transform none

.webdesigner.anim-webdesigner
  .webdesigner__img
    opacity 1
    transform translateX(0)
    transition .5s ease all


.webintegrator
  min-height s(740)
  &__wrapper-text
    position: relative
    float: right
    max-width s(560)
    margin-top s(35)
    text-align: right
    z-index 3
  &__img
    position: absolute
    left: s(-350)
    top s(-50)
    z-index 1
    max-width none
    transform translateX(-70px)
    opacity 0
  &__img--2
    position: absolute
    top s(270)
    left s(165)
    z-index 2
    transform translateY(50px)

.no-js
  .webintegrator__img
  .webdesigner__img--2
    transform none

.webintegrator.anim-webintegrator-screen
  .webintegrator__img
    transform translateX(0)
    opacity 1
    transition .5s ease all
.webintegrator .anim-webintegrator-ipads
  .webintegrator__img--2
    transform translateX(0)
    opacity 1
    transition .5s ease all


.frontend
  min-height s(1000)
  padding-top s(120)
  &:before
    @extend .baseshawl
    bottom s(100)
  &__overflowh
    position absolute
    top s(29)
    left s(105)
    z-index 2
    width 609px
    height 381px
    overflow hidden
  &__wrapper-text
    float: left
    max-width 41%
    margin-top s(51)
  &__link
    width 90%
  &__wrapper
    position absolute
    left 0
    right 0
  &__anim-container
    position absolute
    right s(-200)
    width s(818)
    height 100%
  &__anim-wrapper
    position: relative
    & .anim-front
      position absolute
      z-index 3
      & .line-code
        transform translateY(0)
        stroke-dashoffset 0px
      & .logojs
        transform: translateX(915px) translateY(627px);
        transform-origin 50% 50%
      & .logojs ellipse
        transform-origin 50px 50px
      & .logojs path
        transform-origin 50% 50%
  &__img
    position absolute
    z-index 1
    top: 0

.devbackend
  min-height s(740)
  &__wrapper-text
    position: relative
    float: right
    max-width s(560)
    text-align: right
    z-index 3
  &__img
    position: absolute
    left: s(-250)
    top s(-280)
    z-index 1
    max-width none
    transform rotateY(25deg)
  &__img--2
    position: absolute
    top s(50)
    left s(-250)
    z-index 2
    transform translateX(50px)

.no-js .devbackend .devbackend__img
.no-js .devbackend .devbackend__img--2
  transform none

.devbackend .devbackend__img.anim-devbackend-imac
  transform rotateY(0)
  transition .5s ease transform
.devbackend .devbackend__img--2.anim-devbackend-code
  transform translateX(0)
  transition .5s ease transform


.webmobile
  min-height s(740)
  z-index 1
  &:before
    content: "";
    position: absolute;
    top: 0;
    right: 0;
    left: 0;
    transform: skewY(4.5deg);
    transform-origin: 100% 0;
    bottom: -1px;
    background-color: $cBackgroundBlueGrey
    z-index -1
  &__wrapper-text
    width 38%
    padding-top s(100)
  &__img--1
    position absolute
    top s(-180)
    right s(-70)
    transform translate(200px, -100px);
    opacity 0
  &__img--2
    position absolute
    top s(40)
    right s(-320)
    transform translate(200px, -100px);
    opacity 0
  &__img--3
    position absolute
    top s(360)
    right s(150)
    transform translate(-200px, 100px);
    opacity 0
  &__img--4
    position absolute
    top s(400)
    right s(-460)
    transform translate(200px, -100px);
    opacity 0

.no-js .webmobile__img--1
.no-js .webmobile__img--2
.no-js .webmobile__img--3
.no-js .webmobile__img--4
  transform none
  opacity 1

.webmobile .webmobile__img--1.anim-webmobile-img-1
.webmobile .webmobile__img--2.anim-webmobile-img-2
.webmobile .webmobile__img--3.anim-webmobile-img-3
.webmobile .webmobile__img--4.anim-webmobile-img-4
  transform translate(0)
  opacity 1
  transition .3s ease-out all

